- апи с историей скрыли