@@ -4,7 +4,7 @@ import com.company.app.wildberries_desire_lot.component.common.data.ResponseProd
 import com.company.app.wildberries_searcher.component.api.WildberriesSearcher;
 import com.company.app.wildberries_searcher.component.api.WildberriesSearcherExtractor;
 import com.company.app.wildberries_searcher.component.api.WildberriesSearcherFilterer;
-import com.company.app.wildberries_searcher.component.data.WildberriesSearcherContainer;
+import com.company.app.wildberries_searcher.component.data.WildberriesSearcherContext;
 import com.company.app.wildberries_searcher.component.util.WildberriesSearcherProductsUrlCreator;
 import com.company.app.wildberries_searcher.domain.dto.WildberriesLinkDto;
 import lombok.extern.slf4j.Slf4j;
@@ -12,7 +12,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -24,13 +23,13 @@ public class WildberriesSearcherImpl implements WildberriesSearcher {
     private WildberriesSearcherFilterer wildberriesSearcherFilterer;
 
     @Override
-    public List<WildberriesLinkDto> search(WildberriesSearcherContainer wildberriesSearcherContainer) {
-        String url = WildberriesSearcherProductsUrlCreator.createUrl(wildberriesSearcherContainer);
+    public List<WildberriesLinkDto> search(WildberriesSearcherContext context) {
+        String url = WildberriesSearcherProductsUrlCreator.createUrl(context);
         List<ResponseProducts> products = wildberriesSearcherExtractor.extractResponseProducts(url);
-        List<ResponseProducts> filteredProducts = wildberriesSearcherFilterer.filter(products, wildberriesSearcherContainer);
+        List<ResponseProducts> filteredProducts = wildberriesSearcherFilterer.filter(products, context);
         return filteredProducts.stream()
                 .map(ResponseProducts::toLinkDto)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
